[gd_scene load_steps=14 format=2]

[ext_resource path="res://tiles1.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Buildings/FortressBuilding.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Images/bg.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/instructions.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/menufordefense.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/tree1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/bush.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Defense/DefenceMissile.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/UI/WaveBanner.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/GamePlay/World.gd" type="Script" id=11]
[ext_resource path="res://Scripts/GamePlayTimer.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Defense/EnergyShield.tscn" type="PackedScene" id=13]

[node name="World" type="Node2D"]
script = ExtResource( 11 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 0.025
autostart = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.435294, 0.435294, 0.435294, 1 )
margin_right = 1920.0
margin_bottom = 1054.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Environment" type="Node2D" parent="."]
position = Vector2( 388.827, 223.462 )
scale = Vector2( 0.45, 0.45 )

[node name="Tree" type="TextureRect" parent="Environment"]
margin_left = -839.175
margin_top = 528.892
margin_right = -775.175
margin_bottom = 592.892
rect_scale = Vector2( 3, 4 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree2" type="TextureRect" parent="Environment"]
margin_left = -772.182
margin_top = 574.729
margin_right = -708.182
margin_bottom = 638.729
rect_scale = Vector2( 3, 4 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree3" type="TextureRect" parent="Environment"]
margin_left = -715.767
margin_top = 525.366
margin_right = -651.767
margin_bottom = 589.366
rect_scale = Vector2( 3, 4 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Environment"]
margin_left = -753.953
margin_top = 719.478
margin_right = -688.953
margin_bottom = 759.478
rect_scale = Vector2( 5, 4 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Environment2" type="Node2D" parent="."]
position = Vector2( 388.827, 223.462 )
scale = Vector2( 0.45, 0.45 )

[node name="Tree" type="TextureRect" parent="Environment2"]
margin_left = -412.393
margin_top = 563.187
margin_right = -348.393
margin_bottom = 627.187
rect_scale = Vector2( 3, 4 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree2" type="TextureRect" parent="Environment2"]
margin_left = -345.4
margin_top = 609.024
margin_right = -281.4
margin_bottom = 673.024
rect_scale = Vector2( 3, 4 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree3" type="TextureRect" parent="Environment2"]
margin_left = -288.985
margin_top = 559.661
margin_right = -224.985
margin_bottom = 623.661
rect_scale = Vector2( 3, 4 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Environment2"]
margin_left = -521.509
margin_top = 715.667
margin_right = -456.509
margin_bottom = 755.667
rect_scale = Vector2( 5, 4 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 6.64223
margin_top = 597.083
margin_right = 1926.64
margin_bottom = 1677.08
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 315.259
margin_top = 179.066
margin_right = 2235.26
margin_bottom = 1259.07
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defence" parent="." instance=ExtResource( 9 )]
position = Vector2( 369.098, 578.253 )

[node name="Building" parent="." instance=ExtResource( 3 )]
position = Vector2( 551.684, 502.698 )
scale = Vector2( 2.49439, 2.2757 )

[node name="EnergyShield-1" parent="." instance=ExtResource( 13 )]
position = Vector2( 548.081, 432.215 )

[node name="WaveBanner" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 630.471, 84.2105 )

[node name="WaveBanner2" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 631.579, 122.992 )

[node name="WaveBanner3" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 631.579, 156.233 )

[node name="GamePlayTimer" parent="." instance=ExtResource( 12 )]

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 765.458, 551.349 )
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
